--- a/src/scss/components/navigation/_link.scss
+++ b/src/scss/components/navigation/_link.scss
@@ -5,16 +5,7 @@ a.link[target="_blank"] {
 
   // TODO: This is not wanted, we should separate target="_blank" from external links!
   &::after {
-    background-color: $color-black;
-    background-size: contain;
-    content: "";
-    display: block;
-    height: 16px;
+    @include pseudo-icon('link-external', $spacing, $color-black, block);
     margin: 0 0.1em 0.3em 0.2em;
-    mask-image: icon_url('link-external');
-    mask-position: center;
-    mask-repeat: no-repeat;
-    mask-size: 16px;
-    width: 16px;
   }
 }
