--- a/src/scss/components/paragraphs/_list-of-links.scss
+++ b/src/scss/components/paragraphs/_list-of-links.scss
@@ -125,7 +125,7 @@ $item_spacing: $spacing-triple;
 
   &:hover {
     .list-of-links__item__arrow {
-      transform: translateX($spacing);
+      transform: translateX($spacing-half);
     }
   }
 }
