--- a/src/scss/components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/components/navigation/_header-bottom-navigation.scss
@@ -181,20 +181,11 @@
           }
 
           &:after {
-            background-color: $color-black;
-            background-size: contain;
-            content: "";
-            display: flex;
-            height: 20px;
-            mask-image: icon_url('link-external');
-            mask-position: center;
-            mask-repeat: no-repeat;
-            mask-size: 20px;
+            @include pseudo-icon('link-external', 20px, $color-black, flex);
             position: absolute;
             right: 0;
             top: 50%;
             transform: translateY(-50%);
-            width: 20px;
           }
         }
       }
