UHF-3635: Converted last custom icons in templates to use icon.twig.

--- a/src/scss/components/forms/_select.scss
+++ b/src/scss/components/forms/_select.scss
@@ -60,11 +60,11 @@
   }
 
   .hel-icon {
-    --icon-size: #{$spacing-double};
+    --icon-size: var(--spacing-m);
     pointer-events: none;
     position: absolute;
     right: calc(var(--spacing-s) - var(--border-width) * 2);
-    top: calc(var(--spacing-s) - var(--border-width) * 2);
+    top: calc(var(--spacing-s) - var(--border-width) * 3);
   }
 
   select,
