--- a/templates/button/button.html.twig
+++ b/templates/button/button.html.twig
@@ -8,7 +8,11 @@
 #}
 
 <button type="button" class="hds-button {% if type %}{{ 'hds-button--' ~ type }}{% endif %} {% if size %}{{ 'hds-button--' ~ size }}{% endif %}" {% if disabled == true %}disabled{% endif %}>
-  {% if icon_first == true %}<span aria-hidden="true" class="hel-icon {{ 'hel-icon--' ~ icon_first_type }}"></span>{% endif %}
+  {% if icon_first == true %}
+    {% include '@hdbt/misc/icon.twig' ignore missing with {icon: icon_first_type} %}
+  {% endif %}
   <span class="hds-button__label">{{ label }}</span>
-  {% if icon_last == true %}<span aria-hidden="true" class="hel-icon {{ 'hel-icon--' ~ icon_last_type }}"></span>{% endif %}
+  {% if icon_last == true %}
+    {% include '@hdbt/misc/icon.twig' ignore missing with {icon: icon_last_type} %}
+  {% endif %}
 </button>
