UHF-3635: Fix icon size problems

--- a/src/scss/components/icons/_hdbt-icon.scss
+++ b/src/scss/components/icons/_hdbt-icon.scss
@@ -8,7 +8,7 @@
     height: var(--icon-size);
     mask-position: center center;
     mask-repeat: no-repeat;
-    mask-size: var(--icon-size);
+    mask-size: var(--icon-size) var(--icon-size);
     min-height: var(--icon-size);
     min-width: var(--icon-size);
     position: static;
