UHF-3635: Add hds loading-spinner back

--- a/src/scss/_hds.scss
+++ b/src/scss/_hds.scss
@@ -14,6 +14,7 @@
 @import "external/hds-core/lib/components/button/button.min.css";
 @import "external/hds-core/lib/components/checkbox/checkbox.min.css";
 @import "external/hds-core/lib/components/koros/koros.min.css";
+@import "external/hds-core/lib/components/loading-spinner/loading-spinner.min.css";
 @import "external/hds-core/lib/components/notification/notification.min.css";
 @import "external/hds-core/lib/components/radio-button/radio-button.min.css";
 @import "external/hds-core/lib/components/status-label/status-label.min.css";
