UHF-2777: Clean up code order and documentation for better readability of dev .css files

--- a/src/scss/component-library.scss
+++ b/src/scss/component-library.scss
@@ -1,5 +1,4 @@
-@import "library/variables/_index";
-@import "library/mixins/_index";
+@import "library/_index";
 
 .component-library-wrapper {
   background-color: $color-white;
