--- a/src/scss/components/paragraphs/_accordion.scss
+++ b/src/scss/components/paragraphs/_accordion.scss
@@ -10,15 +10,9 @@
   }
 
   .accordion-item__header {
-    @include font-size(20px, 22px);
     border-top: 1px solid $color-black-20;
-    font-weight: $font-weight-regular;
     margin: 0;
     padding: 0;
-
-    @include breakpoint($breakpoint-l) {
-      @include font-size(24px, 28px);
-    }
 
     // Accordion open state.
     &.handorgel__header--open .accordion-item__button--toggle {
@@ -70,14 +64,13 @@
   }
 
   .accordion-item__button--toggle {
-    @include font-size(20px, 22px);
+    @include font('h4');
     border: none;
     padding: $spacing 60px $spacing 0;
     position: relative;
     width: 100%;
 
     @include breakpoint($breakpoint-l) {
-      @include font-size(24px, 28px);
       padding: $spacing-and-half 60px $spacing-and-half 0;
     }
 
@@ -117,7 +110,7 @@
   }
 
   .accordion-item__button--close {
-    @include font-size(16px, 24px);
+    @include font('button');
     align-items: center;
     bottom: $spacing;
     display: flex;
@@ -139,42 +132,6 @@
 
   .accordion-item__content {
     border: none;
-
-    h3, h4, h5, h6 {
-      margin-top: $spacing-double;
-    }
-
-    h3 {
-      @include font-size(20px, 24px);
-      font-weight: 500;
-
-      @include breakpoint($breakpoint-l) {
-        @include font-size(24px, 28px);
-      }
-    }
-
-    h4 {
-      @include font-size(18px, 18px);
-      font-weight: 500;
-
-      @include breakpoint($breakpoint-l) {
-        @include font-size(22px, 22px);
-      }
-    }
-
-    h5 {
-      @include font-size(18px, 18px);
-      font-weight: 500;
-    }
-
-    h6 {
-      @include font-size(16px, 16px);
-      font-weight: 700;
-
-      @include breakpoint($breakpoint-l) {
-        @include font-size(16px, 16px);
-      }
-    }
   }
 
   .accordion-item__content__inner {
