--- a/src/scss/components/block/_branding.scss
+++ b/src/scss/components/block/_branding.scss
@@ -36,7 +36,7 @@
     }
 
     @include breakpoint($breakpoint-m) {
-      @include font-size(20px, 24px);
+      @include font('special.navigation.site_name');
       margin: 0 $spacing;
       width: auto;
     }
