--- a/src/scss/components/content/_cookie-compliance.scss
+++ b/src/scss/components/content/_cookie-compliance.scss
@@ -107,8 +107,7 @@
 
     h2 {
       margin-top: 0;
-      @include font-size(24px, 29px);
-      font-weight: $font-weight-medium;
+      @include font('h4');
     }
 
     .buttons {
@@ -123,7 +122,7 @@
 
     .hds-button--primary,
     .hds-button--secondary {
-      @include font-size(16px, 24px);
+      @include font('button');
     }
 
     .hds-button--primary {
