--- a/src/scss/components/navigation/_branding-navigation.scss
+++ b/src/scss/components/navigation/_branding-navigation.scss
@@ -5,7 +5,7 @@
   padding: 0;
 
   .menu__link-wrapper a {
-    @include font-size(12px, 14px);
+    @include font('special.navigation.icon_label');
     align-items: center;
     display: flex;
     flex-direction: column;
