--- a/src/scss/components/navigation/_breadcrumb.scss
+++ b/src/scss/components/navigation/_breadcrumb.scss
@@ -1,4 +1,5 @@
 .breadcrumb {
+  @include font('special.breadcrumb.parent');
   align-items: center;
   display: flex;
   list-style: none;
@@ -6,7 +7,6 @@
   padding: $spacing-half $spacing;
 
   @include breakpoint($breakpoint-m) {
-    @include font-size(14px);
     padding: $spacing $spacing-and-half;
   }
 
@@ -57,10 +57,10 @@
 }
 
 .breadcrumb__current {
+  @include font('special.breadcrumb.current');
   display: none;
 
   @include breakpoint($breakpoint-m) {
     display: block;
-    font-weight: $font-weight-bold;
   }
 }
