--- a/src/scss/components/paragraphs/_list-of-links.scss
+++ b/src/scss/components/paragraphs/_list-of-links.scss
@@ -82,14 +82,10 @@ $item_spacing: $spacing-triple;
   }
 
   .list-of-links__item__title {
-    @include font-size(20px);
-    font-weight: 500;
-    line-height: 24px;
+    @include font('h4');
     margin: 0 0 0 (100px + $spacing);
 
     @include breakpoint($breakpoint-s) {
-      @include font-size(24px);
-      line-height: 28px;
       margin: 0;
     }
   }
