--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -47,8 +47,7 @@
   }
 
   h2 {
-    @include font-size(24px, 29px);
-    font-weight: 500;
+    @include font('h4');
     margin-top: 0;
 
     &.footer-top__content__title {
@@ -71,7 +70,7 @@
   }
 
   .menu {
-    @include font-size(18px, 27px);
+    @include font('body');
     margin: $spacing 0 0;
 
     @include breakpoint($breakpoint-m) {
@@ -131,13 +130,9 @@
   }
 
   .menu {
-    @include font-size(14px, 24px);
+    @include font('small');
     display: flex;
     flex-wrap: wrap;
-
-    @include breakpoint($breakpoint-m) {
-      @include font-size(16px, 20px);
-    }
   }
 
   .menu__item {
@@ -172,11 +167,10 @@ a.footer__back-to-top {
   --outline-width: 3px;
   --focus-outline-color: var(--hdbt-color-black);
 
-  @include font-size(24px,24px);
+  @include font('h4');
   align-items: center;
   align-self: flex-end;
   display: flex;
-  font-weight: 500;
   height: 40px; // Match footer logo height
   margin-left: auto; // Keeps link on the right side
   margin-right: $spacing-half;
