--- a/src/scss/components/paragraphs/_content-cards.scss
+++ b/src/scss/components/paragraphs/_content-cards.scss
@@ -45,8 +45,7 @@ $card_spacing: $spacing-and-half;
 }
 
 .content-card__title {
-  @include font-size(24px, 28px);
-  font-weight: 500;
+  @include font('h4');
   margin-top: $spacing;
 }
 
