--- a/src/scss/components/content/_basic-page.scss
+++ b/src/scss/components/content/_basic-page.scss
@@ -1,10 +1,9 @@
 [data-unpublished]::before{
-  @include font-size(16px, 16px);
+  @include font('body');
   background: $color-error;
   color: $color-white;
   content: attr(data-unpublished);
   display: block;
-  font-weight: medium;
   padding-left: $spacing-half;
   padding-right: $spacing-half;
   position: fixed;
@@ -12,7 +11,6 @@
   transform-origin: top left;
 
   @include breakpoint($breakpoint-m) {
-    @include font-size(18px, 27px);
     content: attr(data-unpublished-long);
   }
 }
