--- a/src/scss/components/media/_image.scss
+++ b/src/scss/components/media/_image.scss
@@ -12,10 +12,6 @@
 }
 
 .image__caption {
-  @include font-size(16px, 24px);
-  padding: $spacing $spacing-and-half 0;
-
-  @include breakpoint($breakpoint-m) {
-    padding: $spacing 0 0;
-  }
+  @include font('small');
+  padding-top: $spacing;
 }
