--- a/src/scss/components/misc/_eu-cookie-compliance-banner.scss
+++ b/src/scss/components/misc/_eu-cookie-compliance-banner.scss
@@ -33,7 +33,7 @@
     width: 100%;
 
     > h2 {
-      @include font-size(24px, 29px);
+      @include font('h4');
       margin-top: 0;
       max-width: $content-width-max;
     }
