--- a/src/scss/components/navigation/_mobile-navigation.scss
+++ b/src/scss/components/navigation/_mobile-navigation.scss
@@ -148,7 +148,7 @@ $spacing-menu-item: 20px;
 
 // Mobile navigation footer.
 .mobile-navigation__footer {
-  @include font-size(16px, 16px);
+  @include font('small');
   flex-shrink: 0;
   min-height: 110px;
   padding-top: $spacing;
