--- a/src/scss/components/paragraphs/_list-of-links.scss
+++ b/src/scss/components/paragraphs/_list-of-links.scss
@@ -187,14 +187,11 @@ $item_spacing: $spacing-triple;
 .component--list-of-links-without-image {
   .list-of-links__item {
     .list-of-links__item__desc {
-      @include font-size(16px);
+      @include font('body');
       color: $color-black-60;
-      line-height: 1.3;
       margin-top: $spacing-half;
 
       @include breakpoint($breakpoint-l) {
-        @include font-size(18px);
-        line-height: 1.3;
         margin-top: $spacing-quarter;
       }
     }
