UHF-2777: Convert font-weight to use variables

--- a/src/scss/components/content/_service-channel.scss
+++ b/src/scss/components/content/_service-channel.scss
@@ -163,7 +163,7 @@
   margin-top: $spacing;
 
   .service-channel__call_charge-label {
-    font-weight: 500;
+    font-weight: $font-weight-medium;
     margin-right: $spacing-quarter;
   }
 
