--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -211,7 +211,7 @@ $teaser-icon-size-desktop: 48px;
     white-space: nowrap;
 
     .service__units__count {
-      font-weight: 700;
+      font-weight: $font-weight-bold;
     }
   }
 
