--- a/src/scss/components/navigation/_sidebar-menu.scss
+++ b/src/scss/components/navigation/_sidebar-menu.scss
@@ -102,7 +102,7 @@
         width: 100%;
 
         &[aria-current="page"] {
-          font-weight: 700;
+          font-weight: $font-weight-bold;
         }
 
         &:focus {
