--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -111,6 +111,15 @@
                 {{ content.address_postal }}
               </div>
             {% endif %}
+            {% if content.www|render and show_www == true %}
+              <div class="unit__contact-row unit__contact-row--www">
+                <label class="unit__contact-row__label">
+                  {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'arrow-right'} %}
+                  {{ 'Website link'|t }}:
+                </label>
+                {{ content.www }}
+              </div>
+            {% endif %}
           </div>
         {% endif %}
 
