--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -60,7 +60,8 @@
           content.email|render or
           content.phone|render or
           content.address_postal|render or
-          content.opening_hours|render
+          content.opening_hours|render or
+          content.www|render
         %}
           <div class="unit__contact">
             <h2 class="unit__contact__title">
