UHF-2777: Clean up typography mixins and variables

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -20,7 +20,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: $base-font-family;
-  line-height: $lineheight-l;
+  line-height: $base-line-height;
 
   &.gin--horizontal-toolbar {
     // Move toolbar paddings to dialog-off-canvas.
